--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,8 @@ rust:
 before_install:
   - sudo apt-get update
   - sudo apt-get -y install gcc-arm-linux-gnueabihf
+  - rustup target add arm-unknown-linux-gnueabihf
+  - rustup target add armv7-unknown-linux-gnueabihf
 script:
-  - cargo build --verbose --all
+  - cargo build --target arm-unknown-linux-gnueabihf --release
+  - cargo build --target armv7-unknown-linux-gnueabihf --release
