--- a/pisugar-core/Cargo.toml
+++ b/pisugar-core/Cargo.toml
@@ -8,8 +8,10 @@ edition = "2018"
 
 [dependencies]
 log = "0.4.8"
-env_logger = "0.7.1"
 rppal = "0.11.3"
 chrono = "0.4.10"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+
 num-traits = "0.2"
 num-derive = "0.3"
