--- a/pisugar-core/Cargo.toml
+++ b/pisugar-core/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 [dependencies]
 log = "0.4.8"
 rppal = "0.11.3"
-chrono = "0.4.10"
+chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
