--- a/pisugar-server/Cargo.toml
+++ b/pisugar-server/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 log = "0.4.8"
 env_logger = "0.7"
 bytes = "0.5.4"
+ctrlc = "3.1.4"
 serde = { version = "1.0", features = ["derive"] }
 chrono = { version = "0.4", features = ["serde"] }
 tokio = { version = "0.2", features = ["full"] }
