--- a/.cargo/config
+++ b/.cargo/config
@@ -1,9 +1,9 @@
-#[source.crates-io]
-#registry = "https://github.com/rust-lang/crates.io-index"
-#replace-with = "ustc"
-#
-#[source.ustc]
-#registry = "git://mirrors.ustc.edu.cn/crates.io-index"
+[source.crates-io]
+registry = "https://github.com/rust-lang/crates.io-index"
+replace-with = "ustc"
+
+[source.ustc]
+registry = "git://mirrors.ustc.edu.cn/crates.io-index"
 
 [target.arm-unknown-linux-musleabihf]
 linker = "arm-linux-musleabihf-ld"
