feat: moment.js render time

--- a/electron/package.json
+++ b/electron/package.json
@@ -59,6 +59,7 @@
     "eslint-plugin-vue": "^5.2.3",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
+    "moment": "^2.24.0",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vue-native-websocket": "^2.0.13",
