--- a/electron/package.json
+++ b/electron/package.json
@@ -115,5 +115,6 @@
     "webpack-dev-server": "^3.1.4",
     "webpack-hot-middleware": "^2.22.2",
     "webpack-merge": "^4.1.3"
-  }
+  },
+  "__npminstall_done": false
 }
