--- a/pisugar-server/Cargo.toml
+++ b/pisugar-server/Cargo.toml
@@ -21,3 +21,22 @@ futures-channel = "0.3"
 hyper = "0.13"
 hyper-staticfile = "0.5.1"
 pisugar-core = { path = "../pisugar-core" }
+
+[[bin]]
+name = "pisugar-server"
+
+[package.metadata.deb]
+license-file = ["../LICENSE", "0"]
+copyright = "2020, PiSugar team"
+extended-description = """\
+PiSugar power manager server."""
+depends = "$auto, systemd"
+section = "utility"
+priority = "optional"
+assets = [
+    ["target/release/pisugar-server", "usr/bin/", "755"],
+    ["asserts/pisugar-server.default", "etc/default/pisugar", "644"],
+    ["asserts/pisugar-server.service", "usr/lib/systemd/system/", "644"],
+    ["../electron/dist/web/*", "usr/share/pisugar/web/", "644"],
+    ["../electron/dist/web/fonts/*", "usr/share/pisugar/web/fonts", "644"]
+]
