--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,3 +31,17 @@ jobs:
       run: |
         echo Add other actions to build,
         echo test, and deploy your project.
+
+    # Rust target arm-unknown-linux-gnueabihf
+    - uses: actions-rs/toolchain@v1
+      with:
+        toolchain: stable
+        target: arm-unknown-linux-gnueabihf
+        override: true
+
+    # Rust build
+    - uses: actions-rs/cargo@v1
+      with:
+        use-cross: true
+        command: build
+        args: --target arm-unknown-linux-gnueabihf
