--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,6 +52,13 @@ jobs:
         target: arm-unknown-linux-gnueabihf
         override: true
 
+    # Rust cross build
+    - uses: actions-rs/cargo@v1
+      with:
+        use-cross: true
+        command: build
+        args: --target arm-unknown-linux-gnueabihf
+
     # Rust cargo-deb
     - uses: actions-rs/install@v0.1
       with:
@@ -63,4 +70,4 @@ jobs:
       with:
         use-cross: true
         command: deb
-        args: --target arm-unknown-linux-gnueabihf --manifest-path=pisugar-server/Cargo.toml
+        args: --target arm-unknown-linux-gnueabihf --manifest-path=pisugar-server/Cargo.toml --no-build
