--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,12 +59,25 @@ jobs:
       working-directory: electron
 
     # Rust cache
-    - name: Rust cache
+    - name: Rust cargo cache
       uses: actions/cache@v1
       env:
         cache-name: cache-rust-cargo
       with:
         path: ~/.cargo
+        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/Cargo.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-build-${{ env.cache-name }}-
+          ${{ runner.os }}-build-
+          ${{ runner.os }}-
+
+    # Rust target cache
+    - name: Rust target cache
+      uses: actions/cache@v1
+      env:
+        cache-name: cache-rust-target
+      with:
+        path: target
         key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/Cargo.lock') }}
         restore-keys: |
           ${{ runner.os }}-build-${{ env.cache-name }}-
@@ -83,7 +96,10 @@ jobs:
       with:
         use-cross: true
         command: build
-        args: --target arm-unknown-linux-gnueabihf
+        args: --target arm-unknown-linux-gnueabihf --release
+    - run: |
+        mkdir -p target/arm-unknown-linux-gnueabihf/release
+        cp -rf target/release/* target/arm-unknown-linux-gnueabihf/release/
 
     # Rust cargo-deb
     - uses: actions-rs/install@v0.1
