--- a/.github/workflows/daily-build.yml
+++ b/.github/workflows/daily-build.yml
@@ -26,23 +26,15 @@ jobs:
         cache-name: cache-node-npm
       with:
         path: ~/.npm
-        key: ${{ runner.os }}-cache-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-cache-${{ env.cache-name }}-
-          ${{ runner.os }}-cache-
-          ${{ runner.os }}-
+        key: ${{ runner.os }}-cache-${{ env.cache-name }}
     # Nodjs modules
     - name: Nodejs modules cache
       uses: actions/cache@v1
       env:
-        cache-name: cache-node-modules2
+        cache-name: cache-node-modules
       with:
         path: electron/node_modules
-        key: ${{ runner.os }}-cache-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-cache-${{ env.cache-name }}-
-          ${{ runner.os }}-cache-
-          ${{ runner.os }}-
+        key: ${{ runner.os }}-cache-${{ env.cache-name }}
     # Nodejs dist
     - name: Nodejs dist cache
       uses: actions/cache@v1
@@ -50,11 +42,7 @@ jobs:
         cache-name: cache-node-dist
       with:
         path: electron/dist
-        key: ${{ runner.os }}-cache-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-cache-${{ env.cache-name }}-
-          ${{ runner.os }}-cache-
-          ${{ runner.os }}-
+        key: ${{ runner.os }}-cache-${{ env.cache-name }}
     # Nodejs dependencies
     - run: npm install
       working-directory: electron
@@ -82,11 +70,7 @@ jobs:
         cache-name: cache-rust-cargo
       with:
         path: ~/.cargo
-        key: ${{ runner.os }}-cache-${{ env.cache-name }}-${{ hashFiles('**/Cargo.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-cache-${{ env.cache-name }}-
-          ${{ runner.os }}-cache-
-          ${{ runner.os }}-
+        key: ${{ runner.os }}-cache-${{ env.cache-name }}
     # Rust target cache
     - name: Rust target cache
       uses: actions/cache@v1
@@ -94,11 +78,7 @@ jobs:
         cache-name: cache-rust-target
       with:
         path: target
-        key: ${{ runner.os }}-cache-${{ env.cache-name }}-${{ hashFiles('**/Cargo.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-cache-${{ env.cache-name }}-
-          ${{ runner.os }}-cache-
-          ${{ runner.os }}-
+        key: ${{ runner.os }}-cache-${{ env.cache-name }}
     # Rust target arm-unknown-linux-gnueabihf
     - uses: actions-rs/toolchain@v1
       with:
@@ -133,23 +113,15 @@ jobs:
         cache-name: cache-node-dist
       with:
         path: electron/dist
-        key: ${{ runner.os }}-cache-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-cache-${{ env.cache-name }}-
-          ${{ runner.os }}-cache-
-          ${{ runner.os }}-
-    # Rust cache
+        key: ${{ runner.os }}-cache-${{ env.cache-name }}
+    # Rust cargo cache
     - name: Rust cargo cache
       uses: actions/cache@v1
       env:
         cache-name: cache-rust-cargo
       with:
         path: ~/.cargo
-        key: ${{ runner.os }}-cache-${{ env.cache-name }}-${{ hashFiles('**/Cargo.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-cache-${{ env.cache-name }}-
-          ${{ runner.os }}-cache-
-          ${{ runner.os }}-
+        key: ${{ runner.os }}-cache-${{ env.cache-name }}
     # Rust target cache
     - name: Rust target cache
       uses: actions/cache@v1
@@ -157,11 +129,7 @@ jobs:
         cache-name: cache-rust-target
       with:
         path: target
-        key: ${{ runner.os }}-cache-${{ env.cache-name }}-${{ hashFiles('**/Cargo.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-cache-${{ env.cache-name }}-
-          ${{ runner.os }}-cache-
-          ${{ runner.os }}-
+        key: ${{ runner.os }}-cache-${{ env.cache-name }}
     # Now, correct the build directory
     - run: |
         mkdir -p target/arm-unknown-linux-gnueabihf/release
