--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -18,7 +18,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: '12.x'
-    # Nodejs cache
+    # Nodejs npm
     - name: Nodejs npm cache
       uses: actions/cache@v1
       env:
@@ -99,7 +99,8 @@ jobs:
     needs: [nodejs-build, rust-build]
     steps:
     # Checkout
-    - uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v2
     # Nodejs dist
     - name: Nodejs dist cache
       uses: actions/cache@v1
@@ -108,7 +109,7 @@ jobs:
       with:
         path: electron/dist
         key: ${{ runner.os }}-cache-${{ env.cache-name }}
-    # Rust cache
+    # Rust cargo cache
     - name: Rust cargo cache
       uses: actions/cache@v1
       env:
