--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -54,7 +54,7 @@ jobs:
     # Check out
     - name: Checkout
       uses: actions/checkout@v2
-    - run: sed -e "/.*replace-with.*//g" -i .cargo/config
+    - run: sed -e "s/.*replace-with.*//g" -i .cargo/config
     # Rust cache
     - name: Rust cargo cache
       uses: actions/cache@v1
@@ -91,7 +91,7 @@ jobs:
     # Checkout
     - name: Checkout
       uses: actions/checkout@v2
-    - run: sed -e "/.*replace-with.*//g" -i .cargo/config
+    - run: sed -e "s/.*replace-with.*//g" -i .cargo/config
     # Nodejs dist
     - name: Nodejs dist cache
       uses: actions/cache@v1
