--- a/.github/workflows/fast-build.yml
+++ b/.github/workflows/fast-build.yml
@@ -5,10 +5,10 @@ on:
   push:
     branches: [ master ]
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '0 */1 * * *'
 
 jobs:
-  nodejs-build:
+  build-all:
     runs-on: ubuntu-latest
     steps:
     # Checkout
@@ -16,35 +16,12 @@ jobs:
       uses: actions/checkout@v2
       with:
         ref: master
+
     # Nodejs
     - name: Setup Nodejs
       uses: actions/setup-node@v1
       with:
         node-version: '12.x'
-    # Nodejs npm
-    - name: Nodejs npm cache
-      uses: actions/cache@v1
-      env:
-        cache-name: cache-node-npm
-      with:
-        path: ~/.npm
-        key: ${{ runner.os }}-cache-${{ env.cache-name }}
-    # Nodjs modules
-    - name: Nodejs modules cache
-      uses: actions/cache@v1
-      env:
-        cache-name: cache-node-modules
-      with:
-        path: electron/node_modules
-        key: ${{ runner.os }}-cache-${{ env.cache-name }}
-    # Nodejs dist
-    - name: Nodejs dist cache
-      uses: actions/cache@v1
-      env:
-        cache-name: cache-node-dist
-      with:
-        path: electron/dist
-        key: ${{ runner.os }}-cache-${{ env.cache-name }}
     # Nodejs dependencies
     - run: npm install
       working-directory: electron
@@ -52,31 +29,8 @@ jobs:
     - run: npm run build:web
       working-directory: electron
 
-  rust-build:
-    runs-on: ubuntu-latest
-    steps:
-    # Check out
-    - name: Checkout
-      uses: actions/checkout@v2
-      with:
-        ref: master
+    # Fix cargo config
     - run: sed -e "s/.*replace-with.*//g" -i .cargo/config
-    # Rust cache
-    - name: Rust cargo cache
-      uses: actions/cache@v1
-      env:
-        cache-name: cache-rust-cargo
-      with:
-        path: ~/.cargo
-        key: ${{ runner.os }}-cache-${{ env.cache-name }}
-    # Rust target cache
-    - name: Rust target cache
-      uses: actions/cache@v1
-      env:
-        cache-name: cache-rust-target
-      with:
-        path: target
-        key: ${{ runner.os }}-cache-${{ env.cache-name }}
     # Rust target arm-unknown-linux-gnueabihf
     - uses: actions-rs/toolchain@v1
       with:
@@ -90,40 +44,7 @@ jobs:
         command: build
         args: --target arm-unknown-linux-gnueabihf --release
 
-  deb-packaging:
-    runs-on: ubuntu-latest
-    needs: [nodejs-build, rust-build]
-    steps:
-    # Checkout
-    - name: Checkout
-      uses: actions/checkout@v2
-      with:
-          ref: master
-    - run: sed -e "s/.*replace-with.*//g" -i .cargo/config
-    # Nodejs dist
-    - name: Nodejs dist cache
-      uses: actions/cache@v1
-      env:
-        cache-name: cache-node-dist
-      with:
-        path: electron/dist
-        key: ${{ runner.os }}-cache-${{ env.cache-name }}
-    # Rust cargo cache
-    - name: Rust cargo cache
-      uses: actions/cache@v1
-      env:
-        cache-name: cache-rust-cargo
-      with:
-        path: ~/.cargo
-        key: ${{ runner.os }}-cache-${{ env.cache-name }}
-    # Rust target cache
-    - name: Rust target cache
-      uses: actions/cache@v1
-      env:
-        cache-name: cache-rust-target
-      with:
-        path: target
-        key: ${{ runner.os }}-cache-${{ env.cache-name }}
+    # Cargo deb
     # Now, correct the build directory
     - run: |
         mkdir -p target/arm-unknown-linux-gnueabihf/release
