--- a/pisugar-server/debian/config
+++ b/pisugar-server/debian/config
@@ -5,7 +5,7 @@
 db_input medium pisugar-server/address || true
 db_go
 
-db_input medium pisugar-server/http || true
+db_input medium pisugar-server/web || true
 db_go
 
 db_input medium pisugar-server/tcp || true
