--- a/electron/package.json
+++ b/electron/package.json
@@ -62,6 +62,7 @@
     "moment": "^2.24.0",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
+    "vue-i18n": "^8.17.4",
     "vue-native-websocket": "^2.0.13",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
