--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -7,18 +7,15 @@ on:
     branches: [ master ]
 
 jobs:
-  nodejs-build:
+  build-all:
     runs-on: ubuntu-latest
     steps:
     # Checkout
     - name: Checkout
       uses: actions/checkout@v2
-    # Nodejs
-    - name: Setup Nodejs
-      uses: actions/setup-node@v1
-      with:
-        node-version: '12.x'
-    # Nodejs npm
+    - run: sed -e "s/.*replace-with.*//g" -i .cargo/config
+
+    # Nodejs npm cache
     - name: Nodejs npm cache
       uses: actions/cache@v1
       env:
@@ -26,7 +23,7 @@ jobs:
       with:
         path: ~/.npm
         key: ${{ runner.os }}-build-${{ env.cache-name }}
-    # Nodjs modules
+    # Nodejs modules cache
     - name: Nodejs modules cache
       uses: actions/cache@v1
       env:
@@ -34,27 +31,18 @@ jobs:
       with:
         path: electron/node_modules
         key: ${{ runner.os }}-build-${{ env.cache-name }}
-    # Nodejs dist
-    - name: Nodejs dist cache
-      uses: actions/cache@v1
-      env:
-        cache-name: cache-node-dist
+    # Nodejs
+    - name: Setup Nodejs
+      uses: actions/setup-node@v1
       with:
-        path: electron/dist
-        key: ${{ runner.os }}-build-${{ env.cache-name }}
+        node-version: '12.x'
     # Nodejs dependencies
     - run: npm install
       working-directory: electron
     # Nodejs build web
     - run: npm run build:web
       working-directory: electron
-  rust-build:
-    runs-on: ubuntu-latest
-    steps:
-    # Check out
-    - name: Checkout
-      uses: actions/checkout@v2
-    - run: sed -e "s/.*replace-with.*//g" -i .cargo/config
+
     # Rust cache
     - name: Rust cargo cache
       uses: actions/cache@v1
@@ -84,42 +72,11 @@ jobs:
         command: build
         args: --target arm-unknown-linux-gnueabihf --release
 
-  deb-packaging:
-    runs-on: ubuntu-latest
-    needs: [nodejs-build, rust-build]
-    steps:
-    # Checkout
-    - name: Checkout
-      uses: actions/checkout@v2
-    - run: sed -e "s/.*replace-with.*//g" -i .cargo/config
-    # Nodejs dist
-    - name: Nodejs dist cache
-      uses: actions/cache@v1
-      env:
-        cache-name: cache-node-dist
-      with:
-        path: electron/dist
-        key: ${{ runner.os }}-build-${{ env.cache-name }}
-    # Rust cargo cache
-    - name: Rust cargo cache
-      uses: actions/cache@v1
-      env:
-        cache-name: cache-rust-cargo
-      with:
-        path: ~/.cargo
-        key: ${{ runner.os }}-build-${{ env.cache-name }}
-    # Rust target cache
-    - name: Rust target cache
-      uses: actions/cache@v1
-      env:
-        cache-name: cache-rust-target
-      with:
-        path: target
-        key: ${{ runner.os }}-build-${{ env.cache-name }}
     # Now, correct the build directory
     - run: |
         mkdir -p target/arm-unknown-linux-gnueabihf/release
         cp -rf target/release/* target/arm-unknown-linux-gnueabihf/release/
+
     # Rust install cargo-deb
     - name: Install cargo-deb
       uses: actions-rs/install@v0.1
@@ -137,7 +94,7 @@ jobs:
         command: deb
         args: --target arm-unknown-linux-gnueabihf --manifest-path=pisugar-poweroff/Cargo.toml --no-build --no-strip
     # Upload artifact
-    - name: Checkout
+    - name: Upload artifacts
       uses: actions/upload-artifact@v1
       with:
         name: pisugar-server-deb
