Support musl cross compile

--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -13,7 +13,8 @@ jobs:
     # Checkout
     - name: Checkout
       uses: actions/checkout@v2
-    - run: sed -e "s/.*replace-with.*//g" -i .cargo/config
+    - name: Fix cargo config
+      run: sed -e "s/.*replace-with.*//g" -i .cargo/config
 
     # Nodejs npm cache
     - name: Nodejs npm cache
@@ -59,26 +60,31 @@ jobs:
       with:
         path: target
         key: ${{ runner.os }}-build-${{ env.cache-name }}
-    # Rust target arm-unknown-linux-gnueabihf
-    - uses: actions-rs/toolchain@v1
+    # Rust musl cross cache
+    - name: Rust musl cache
+      uses: actions/cache@v1
+      env:
+        cache-name: cache-rust-musl
+      with:
+        path: arm-linux-musleabihf-cross
+        key: ${{ runner.os }}-build-${{ env.cache-name }}
+    # Rust musl cross toolchain
+    - name: Rust musl cross toolchain
+      run: |
+        if ! test -d arm-linux-musleabihf-cross/bin; then
+          wget https://more.musl.cc/$(uname -m)-linux-musl/arm-linux-musleabihf-cross.tgz
+          tar -xvf arm-linux-musleabihf-cross.tgz
+        fi
+        export PATH="$(pwd)/arm-linux-musleabihf-cross/bin:$PATH"
+    # Rust target arm-unknown-linux-musleabihf
+    - name: Rust add arm-unknown-linux-musleabihf target
+      uses: actions-rs/toolchain@v1
       with:
         toolchain: stable
-        target: arm-unknown-linux-gnueabihf
+        target: arm-unknown-linux-musleabihf
         override: true
-    # Rust cross build
-    - uses: actions-rs/cargo@v1
-      with:
-        use-cross: true
-        command: build
-        args: --target arm-unknown-linux-gnueabihf --release
-
-    # Now, correct the build directory
-    - run: |
-        mkdir -p target/arm-unknown-linux-gnueabihf/release
-        cp -rf target/release/* target/arm-unknown-linux-gnueabihf/release/
-
     # Rust install cargo-deb
-    - name: Install cargo-deb
+    - name: Rust install cargo-deb
       uses: actions-rs/install@v0.1
       with:
         crate: cargo-deb
@@ -87,15 +93,16 @@ jobs:
     - uses: actions-rs/cargo@v1
       with:
         command: deb
-        args: --target arm-unknown-linux-gnueabihf --manifest-path=pisugar-server/Cargo.toml --no-build --no-strip
+        args: --target arm-unknown-linux-musleabihf --manifest-path=pisugar-server/Cargo.toml
     # Rust cargo deb - pisugar-poweroff
     - uses: actions-rs/cargo@v1
       with:
         command: deb
-        args: --target arm-unknown-linux-gnueabihf --manifest-path=pisugar-poweroff/Cargo.toml --no-build --no-strip
+        args: --target arm-unknown-linux-musleabihf --manifest-path=pisugar-poweroff/Cargo.toml
+
     # Upload artifact
     - name: Upload artifacts
       uses: actions/upload-artifact@v1
       with:
         name: pisugar-debs
-        path: target/arm-unknown-linux-gnueabihf/debian
+        path: target/arm-unknown-linux-musleabihf/debian
